Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-11658

Android: QtCreator is unable to deploy to virtual Android device

XMLWordPrintable

    • ffbb129f183b49281bd6376f6982f52cb8f07a9a

      With the latest Android SDK Tools 22.6 the format of "android list avd" has changed so that it lists ABI with prefixed tag information:

      ...
      Tag/ABI: default/armeabi-v7a
      ...
      

      This causes Qt Creator Android plugin to not recognise ABI correctly and it will show error message: "ABI is incompatible, device supports ABIs"

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kileppal Kimmo Leppälä
            kileppal Kimmo Leppälä
            Votes:
            2 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes