Fix deployment to Android virtual device

With the latest Android SDK Tools installed deployment to Android
Virtual Device failed since the format of "android list avd"
changed to include device tag information.

Task-number: QTCREATORBUG-11658
Change-Id: I72a2427dedfaf0cd7638b9805c545fda0bd6598e
Reviewed-by: Daniel Teske <daniel.teske@digia.com>
Reviewed-by: Kimmo Leppälä <kimmo.leppala@digia.com>